Fix menu items not showing by removing language-specific configuration. Remove now-unnecessary custom CSS.

--- a/static/css/all-pages.css
+++ b/static/css/all-pages.css
@@ -1,12 +1,6 @@
 .logo__cursor {
-  display:inline-block;
-  width: 10px;
   height: 0.2rem;
-  background: #8f34eb;
-  margin-left: 5px;
   margin-top: 0.8rem;
-  border-radius: 1px;
-  animation: cursor 1s infinite
 }
 
 @keyframes cursor{
